templatia-derive/tests/compile_fail/unsupported_collection.rs
use templatia::Template;

#[derive(Template)]
#[templatia(template = "items={items}")]
struct HasCollection {
    items: Vec<String>,
}
