templatia-derive/tests/compile_fail/unsupported_collection.stderr
error: unsupported type field: items has a Vec<String> type. currently, Vec<String> is not supported
 --> tests/compile_fail/unsupported_collection.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/compile_fail/unsupported_collection.rs:7:2
  |
7 | }
  |  ^ consider adding a `main` function to `$DIR/tests/compile_fail/unsupported_collection.rs`
